tweaked weapons and powerups, fixed null pointer exception

--- a/frontend/public/game.html
+++ b/frontend/public/game.html
@@ -72,8 +72,8 @@ Clouds - Image by rawpixel.com
   window.addEventListener('resize', resizeCanvas, false);
   resizeCanvas();
 
-  // const socket = eio('ws://localhost:1700', {path: '/engine.io/game'});
-  const socket = eio('wss://y-backend.com:1700', {path: '/engine.io/game'});
+   const socket = eio('ws://localhost:1700', {path: '/engine.io/game'});
+  //const socket = eio('wss://y-backend.com:1700', {path: '/engine.io/game'});
   socket.on('open', () => {
     console.log('socket opened');
     socket.send(JSON.stringify({type: 'playerjoin', id: playerId, name: playerName}));
